--- a/scss/index/_header.scss
+++ b/scss/index/_header.scss
@@ -1,4 +1,5 @@
 @import "index/contenedor";
+@import "base/variables";
 
 header {
     grid-area: logo;
@@ -10,7 +11,17 @@ header {
         animation-name: colorTexto;
         animation-duration: $duracion-por-defecto;
         &:hover{
-            opacity: 0.5;
+            opacity: $opacidad-por-defecto;
+        }
+    }
+}
+
+/*MEDIAQUERIES*/
+@media only screen and (min-width: 360px) and (max-width: 820px){
+    header{
+        img{
+            width: 100%;
+            margin-left: 50%;
         }
     }
 }
