--- a/scss/proyectos/_contenedor-proyectos.scss
+++ b/scss/proyectos/_contenedor-proyectos.scss
@@ -22,3 +22,13 @@
         opacity: 1;
     }
 }
+
+/*MEDIAQUERIES*/
+@media only screen and (min-width: 360px) and (max-width: 820px){
+    .contenedorProyectos{
+        grid-template-areas: "logo nav"
+                             "ppal ppal"
+                             "pieProy pieProy";
+        grid-template-columns: 50% 50%;
+    }
+}
